framec_tests/language_specific/rust/v3_control_flow/positive/forward_parent_exec.frm
@target rust
// @run-expect: FORWARD:PARENT

system S {
    machine:
        $A => $P {
            e() {
                => $^
            }
        }
        $P { }
}

