framec_tests/language_specific/rust/v3_control_flow/negative/forward_without_parent_block.frm
@target rust
# @expect: E403

system S {
    machine:
        $A {
            e() {
                => $^
            }
        }
}

